Docs fix: align Font Awesome font with Docsy theme
- fixes chevrons in docs sidebar

--- a/docs/assets/scss/_sidebar-left.scss
+++ b/docs/assets/scss/_sidebar-left.scss
@@ -52,7 +52,7 @@
 						&::after {
 							display: inline-flex;
 							content: '\f078';
-							font-family: 'Font Awesome 5 Free';
+  							font: var(--fa-font-solid);
 						}
 					}
 					&.active-path {
